--- a/config.gradle
+++ b/config.gradle
@@ -25,6 +25,7 @@ ext{
             'gson' :  'com.google.code.gson:gson:2.5',
             'logger' :  'com.orhanobut:logger:1.4',
             'photoview' :  'com.github.chrisbanes.photoview:library:1.2.4',
-            'numberprogressbar' :  'com.daimajia.numberprogressbar:library:1.2'
+            'numberprogressbar' :  'com.daimajia.numberprogressbar:library:1.2',
+            'blockcanary':'com.github.moduth:blockcanary-android:1.2.1'
     ]
 }
