--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ def getSecret(){
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile rootProject.ext.dependencies["appcompat-v7:23.1.1"]
     compile rootProject.ext.dependencies["design:23.1.1"]
@@ -58,7 +58,6 @@ dependencies {
     compile rootProject.ext.dependencies["rxandroid"]
     compile rootProject.ext.dependencies["adapter-rxjava"]
     compile rootProject.ext.dependencies["blockcanary"]
-
     compile 'com.google.dagger:dagger:2.4'
     apt 'com.google.dagger:dagger-compiler:2.4'
     //java注解
