1.optimized loading more 2.replaced default adapter to BaseRecyclerViewAdapterHelper 3.replaced request url

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,5 @@ dependencies {
     apt 'com.google.dagger:dagger-compiler:2.4'
     //java注解
     compile 'org.glassfish:javax.annotation:10.0-b28'
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:v1.9.0'
 }
