--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,9 @@
         </activity>
         <activity android:name=".LoginActivity"></activity>
 
-        <activity android:name=".mainmovie.MovieDetailActivity"></activity>
+        <activity android:name=".mainmovie.MovieDetailActivity">
+
+        </activity>
 
     </application>
 
