--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         </activity>
         <activity android:name=".LoginActivity"></activity>
 
-        <activity android:name=".mainmovie.MovieDetailActivity">
+        <activity android:name=".mainmovie.moviedetail.MovieDetailActivity">
 
         </activity>
 
