--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,5 @@ dependencies {
     compile 'org.glassfish:javax.annotation:10.0-b28'
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:v1.9.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.android.support:support-v4:19.1.0'
 }
