--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,11 +83,11 @@ dependencies {
     compile rootProject.ext.dependencies["rxandroid"]
     compile rootProject.ext.dependencies["adapter-rxjava"]
     compile rootProject.ext.dependencies["blockcanary"]
-
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:v2.0.7'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.android.support:support-v4:25.0.0'
     compile 'com.daimajia.numberprogressbar:library:1.2'
     //加载动画
     compile 'com.wang.avi:library:2.1.3'
+    compile 'com.squareup.okio:okio:1.11.0'
 }
