--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity android:name=".ui.login.LoginActivity"/>
         <activity android:name=".ui.mainmovie.detail.MovieDetailActivity"/>
         <activity android:name=".ui.comments.CommentsActivity"/>
+        <activity android:name=".ui.staff.StaffDetailActivity"/>
         <activity android:name=".ui.user.UserActivity"/>
         <activity android:name=".ui.calendar.CalendarActivity"/>
         <activity android:name=".ui.about.AboutActivity"/>
