--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,7 +82,6 @@ dependencies {
     compile rootProject.ext.dependencies["rxjava"]
     compile rootProject.ext.dependencies["rxandroid"]
     compile rootProject.ext.dependencies["adapter-rxjava"]
-    compile rootProject.ext.dependencies["blockcanary"]
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:v2.0.7'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.android.support:support-v4:25.0.0'
@@ -90,4 +89,13 @@ dependencies {
     //加载动画
     compile 'com.wang.avi:library:2.1.3'
     compile 'com.squareup.okio:okio:1.11.0'
+
+    //阻塞检查
+    debugCompile 'com.github.markzhai:blockcanary-android:1.4.0'
+    releaseCompile 'com.github.markzhai:blockcanary-no-op:1.4.0'
+
+    //内存泄漏检查
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
 }
