--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,13 +89,12 @@ dependencies {
     //加载动画
     compile 'com.wang.avi:library:2.1.3'
     compile 'com.squareup.okio:okio:1.11.0'
-
     //阻塞检查
     debugCompile 'com.github.markzhai:blockcanary-android:1.4.0'
     releaseCompile 'com.github.markzhai:blockcanary-no-op:1.4.0'
-
     //内存泄漏检查
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    compile 'joda-time:joda-time:2.9.7'
 }
