--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,8 @@ dependencies {
     //加载动画
     compile 'com.wang.avi:library:2.1.3'
     compile 'com.squareup.okio:okio:1.11.0'
+    //多主题
+    compile 'com.bilibili:magicasakura:0.1.5@aar'
     //阻塞检查
     debugCompile 'com.github.markzhai:blockcanary-android:1.4.0'
     releaseCompile 'com.github.markzhai:blockcanary-no-op:1.4.0'
