--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'com.android.application'
 //apply plugin: 'com.neenbedankt.android-apt'
 
 android {
-    compileSdkVersion rootProject.ext.android.compileSdkVersion
-    buildToolsVersion rootProject.ext.android.buildToolsVersion
+    compileSdkVersion 23
+    buildToolsVersion '23.0.3'
 
     defaultConfig {
         applicationId rootProject.ext.android.applicationId
@@ -86,8 +86,10 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.android.support:support-v4:25.0.0'
     compile 'com.daimajia.numberprogressbar:library:1.2'
-//    compile 'com.flyco.labelview:FlycoLabelView_Lib:1.0.2@aar'
-//    compile 'com.github.shts:TriangleLabelView:1.1.2'
+    //    compile 'com.flyco.labelview:FlycoLabelView_Lib:1.0.2@aar'
+
+    //    compile 'com.github.shts:TriangleLabelView:1.1.2'
+
     //加载动画
     compile 'com.wang.avi:library:2.1.3'
     compile 'com.squareup.okio:okio:1.11.0'
