--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,4 +104,5 @@ dependencies {
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     compile 'com.android.support:palette-v7:25.1.1'
+    compile 'org.greenrobot:eventbus:3.0.0'
 }
