--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,8 @@
         <activity android:name=".ui.settings.SettingsActivity"/>
         <activity android:name=".ui.comments.SingleCommentActivity"/>
 
+        <service android:name=".data.SyncService"/>
+
     </application>
 
 </manifest>
