--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,4 +105,6 @@ dependencies {
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     compile 'com.android.support:palette-v7:25.1.1'
     compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'com.facebook.stetho:stetho:1.4.1'
+    compile 'com.uphyca:stetho_realm:2.0.0'
 }
