--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.floatingmuseum.mocloud">
-    
+
     <!--联网-->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <!--读写-->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:name=".MoCloud"
@@ -18,7 +18,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <!--android4.2有一个新特性 layoutRtl，当然是对于开发者而言的，主要是方便开发者去支持阿拉伯语/波斯语等阅读习惯是从右往左的。-->
-        
+
         <activity
             android:name=".ui.main.MainActivity"
             android:label="@string/app_name"
@@ -29,18 +29,21 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.login.LoginActivity"/>
-        <activity android:name=".ui.mainmovie.detail.MovieDetailActivity"/>
-        <activity android:name=".ui.comments.CommentsActivity"/>
-        <activity android:name=".ui.staff.StaffDetailActivity"/>
-        <activity android:name=".ui.user.UserActivity"/>
-        <activity android:name=".ui.recommendations.RecommendationsActivity"/>
-        <activity android:name=".ui.calendar.CalendarActivity"/>
-        <activity android:name=".ui.about.AboutActivity"/>
-        <activity android:name=".ui.settings.SettingsActivity"/>
-        <activity android:name=".ui.comments.SingleCommentActivity"/>
+        <activity android:name=".ui.login.LoginActivity" />
+        <activity android:name=".ui.mainmovie.detail.MovieDetailActivity" />
+        <activity android:name=".ui.comments.CommentsActivity" />
+        <activity android:name=".ui.staff.StaffDetailActivity" />
+        <activity android:name=".ui.user.UserActivity" />
+        <activity android:name=".ui.recommendations.RecommendationsActivity" />
+        <activity android:name=".ui.calendar.CalendarActivity" />
+        <activity android:name=".ui.about.AboutActivity" />
+        <activity android:name=".ui.settings.SettingsActivity" />
+        <activity android:name=".ui.comments.SingleCommentActivity" />
+        <activity
+            android:name=".ui.mainmovie.detail.YoutubePlayer"
+            android:theme="@style/DialogActivity" />
 
-        <service android:name=".data.SyncService"/>
+        <service android:name=".data.SyncService" />
 
     </application>
 
