--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '23.0.3'
+    buildToolsVersion '25.0.3'
 
     defaultConfig {
         applicationId rootProject.ext.android.applicationId
@@ -79,8 +79,8 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile files('libs/YouTubeAndroidPlayerApi.jar')
-    compile rootProject.ext.dependencies["appcompat-v7:23.1.1"]
-    compile rootProject.ext.dependencies["design:23.1.1"]
+    compile rootProject.ext.dependencies["appcompat-v7"]
+    compile rootProject.ext.dependencies["design"]
     compile rootProject.ext.dependencies["cardview-v7"]
     compile rootProject.ext.dependencies["butterknife"]
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
@@ -96,7 +96,7 @@ dependencies {
     compile rootProject.ext.dependencies["adapter-rxjava"]
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:v2.7.8'
     compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'com.android.support:support-v4:25.0.0'
+    compile 'com.android.support:support-v4:25.3.1'
     compile 'com.daimajia.numberprogressbar:library:1.2'
     //    compile 'com.flyco.labelview:FlycoLabelView_Lib:1.0.2@aar'
 
@@ -114,7 +114,7 @@ dependencies {
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-    compile 'com.android.support:palette-v7:25.1.1'
+    compile 'com.android.support:palette-v7:25.3.1'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.facebook.stetho:stetho:1.4.1'
     compile 'com.uphyca:stetho_realm:2.0.0'
