--- a/config.gradle
+++ b/config.gradle
@@ -10,9 +10,9 @@ ext{
     ]
 
     dependencies = [
-            'appcompat-v7:23.1.1' : 'com.android.support:appcompat-v7:23.1.1',
-            'design:23.1.1' :  'com.android.support:design:23.1.1',
-            'cardview-v7' :  'com.android.support:cardview-v7:23.1.1',
+            'appcompat-v7' : 'com.android.support:appcompat-v7:25.3.1',
+            'design' :  'com.android.support:design:25.3.1',
+            'cardview-v7' :  'com.android.support:cardview-v7:25.3.1',
 
             'okhttp' :  'com.squareup.okhttp3:okhttp:3.0.1',
             'retrofit' :  'com.squareup.retrofit2:retrofit:2.0.0-beta4',
