--- a/app/build.gradle
+++ b/app/build.gradle
@@ -121,4 +121,5 @@ dependencies {
     compile 'com.github.medyo:fancybuttons:1.8.3'
     compile 'com.github.anzaizai:EasyRefreshLayout:1.1.5'
     compile 'com.github.maoruibin:OneDrawable:1.0.2'
+    compile 'com.yarolegovich:discrete-scrollview:1.2.0'
 }
