--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,5 +122,5 @@ dependencies {
     compile 'com.github.anzaizai:EasyRefreshLayout:1.1.5'
     compile 'com.github.maoruibin:OneDrawable:1.0.2'
     compile 'com.yarolegovich:discrete-scrollview:1.2.0'
-    compile 'com.github.jakob-grabner:Circle-Progress-View:v1.3'
+    compile 'com.github.lzyzsd:circleprogress:1.2.1'
 }
