--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:theme="@style/AppTheme">
         <!--android4.2有一个新特性 layoutRtl，当然是对于开发者而言的，主要是方便开发者去支持阿拉伯语/波斯语等阅读习惯是从右往左的。-->
 
-        <activity android:name=".ui.main.MainActivity"/>
+        <activity android:name=".ui.main.MainActivity" />
         <activity
             android:name=".ui.main.MainActivity1"
             android:label="@string/app_name"
@@ -31,15 +31,21 @@
         </activity>
 
         <activity android:name=".ui.login.LoginActivity" />
-        <activity android:name=".ui.movie.detail.MovieDetailActivity" />
-        <activity android:name=".ui.comments.CommentsActivity" />
+        <activity
+            android:name=".ui.movie.detail.MovieDetailActivity"
+            android:hardwareAccelerated="false" />
+        <activity
+            android:name=".ui.comments.CommentsActivity"
+            android:hardwareAccelerated="false" />
         <activity android:name=".ui.staff.StaffDetailActivity" />
         <activity android:name=".ui.user.UserActivity" />
         <activity android:name=".ui.recommendations.RecommendationsActivity" />
         <activity android:name=".ui.calendar.CalendarActivity" />
         <activity android:name=".ui.about.AboutActivity" />
         <activity android:name=".ui.settings.SettingsActivity" />
-        <activity android:name=".ui.comments.SingleCommentActivity" />
+        <activity
+            android:name=".ui.comments.SingleCommentActivity"
+            android:hardwareAccelerated="false" />
         <activity
             android:name=".ui.movie.detail.YoutubePlayer"
             android:configChanges="orientation"
