--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,12 @@ buildscript {
     repositories {
         mavenCentral()
         jcenter()
+        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
         classpath 'io.realm:realm-gradle-plugin:2.3.1'
+        classpath 'io.fabric.tools:gradle:1.+'
 //        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,6 +18,7 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url 'https://maven.fabric.io/public' }
         mavenCentral()
         jcenter()
         maven {
