--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.0-beta6'
         classpath 'io.realm:realm-gradle-plugin:2.3.1'
         classpath 'io.fabric.tools:gradle:1.+'
 //        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
