--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,10 @@ buildscript {
         mavenCentral()
         jcenter()
         maven { url 'https://maven.fabric.io/public' }
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-beta6'
+        classpath 'com.android.tools.build:gradle:3.0.0'
         classpath 'io.realm:realm-gradle-plugin:2.3.1'
         classpath 'io.fabric.tools:gradle:1.+'
 //        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
@@ -27,6 +28,7 @@ allprojects {
         maven {
             url 'https://github.com/uPhyca/stetho-realm/raw/master/maven-repo'
         }
+        google()
     }
 }
 
