--- a/config.gradle
+++ b/config.gradle
@@ -10,21 +10,23 @@ ext{
     ]
 
     dependencies = [
-            'appcompat-v7' : 'com.android.support:appcompat-v7:25.3.1',
-            'design' :  'com.android.support:design:25.3.1',
-            'cardview-v7' :  'com.android.support:cardview-v7:25.3.1',
+            'appcompat-v7' : 'com.android.support:appcompat-v7:27.0.2',
+            'design' :  'com.android.support:design:27.0.2',
+            'cardview-v7' :  'com.android.support:cardview-v7:27.0.2',
+            'support-v4' :  'com.android.support:support-v4:27.0.2',
+            'palette' :  'com.android.support:palette-v7:27.0.2',
 
-            'okhttp' :  'com.squareup.okhttp3:okhttp:3.0.1',
-            'retrofit' :  'com.squareup.retrofit2:retrofit:2.0.0-beta4',
-            'rxjava' : 'io.reactivex:rxjava:1.2.7',
-            'rxandroid' : 'io.reactivex:rxandroid:1.1.0',
-            'adapter-rxjava' : 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4',
+            'okhttp' :  'com.squareup.okhttp3:okhttp:3.9.1',
+            'retrofit' :  'com.squareup.retrofit2:retrofit:2.3.0',
+            'rxjava' : 'io.reactivex:rxjava:1.3.4',
+            'rxandroid' : 'io.reactivex:rxandroid:1.2.1',
+            'adapter-rxjava' : 'com.squareup.retrofit2:adapter-rxjava:2.3.0',
             'glide' :  'com.github.bumptech.glide:glide:3.7.0',
-            'converter-gson' :  'com.squareup.retrofit2:converter-gson:2.0.0-beta4',
-            'butterknife' :  'com.jakewharton:butterknife:8.5.1',
-            'gson' :  'com.google.code.gson:gson:2.5',
-            'logger' :  'com.orhanobut:logger:1.4',
-            'photoview' :  'com.github.chrisbanes.photoview:library:1.2.4',
-            'numberprogressbar' :  'com.daimajia.numberprogressbar:library:1.2',
+            'converter-gson' :  'com.squareup.retrofit2:converter-gson:2.3.0',
+            'butterknife' :  'com.jakewharton:butterknife:8.8.1',
+            'gson' :  'com.google.code.gson:gson:2.8.2',
+            'logger' :  'com.orhanobut:logger:2.1.1',
+            'photoview' :  'com.github.chrisbanes:PhotoView:2.1.3',
+            'numberprogressbar' :  'com.daimajia.numberprogressbar:library:1.4@aar',
     ]
 }
