--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,13 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 apply plugin: 'realm-android'
 apply plugin: 'io.fabric'
+apply plugin: 'kotlin-kapt'
 //apply plugin: 'com.neenbedankt.android-apt'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.3'
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId rootProject.ext.android.applicationId
@@ -17,6 +19,8 @@ android {
         renderscriptTargetApi 19
         renderscriptSupportModeEnabled true
         vectorDrawables.useSupportLibrary = true
+
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -45,6 +49,8 @@ android {
             variant.buildConfigField "String","YoutubeKey","\""+getYoutubeKey()+"\""
         }
     }
+
+
 }
 
 def getID(){
@@ -78,54 +84,60 @@ def getYoutubeKey(){
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile files('libs/YouTubeAndroidPlayerApi.jar')
-    compile rootProject.ext.dependencies["appcompat-v7"]
-    compile rootProject.ext.dependencies["design"]
-    compile rootProject.ext.dependencies["cardview-v7"]
-    compile rootProject.ext.dependencies["butterknife"]
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
-    compile rootProject.ext.dependencies["okhttp"]
-    compile rootProject.ext.dependencies["glide"]
-    compile rootProject.ext.dependencies["retrofit"]
-    compile rootProject.ext.dependencies["converter-gson"]
-    compile rootProject.ext.dependencies["gson"]
-    compile rootProject.ext.dependencies["logger"]
-    compile rootProject.ext.dependencies["photoview"]
-    compile rootProject.ext.dependencies["rxjava"]
-    compile rootProject.ext.dependencies["rxandroid"]
-    compile rootProject.ext.dependencies["adapter-rxjava"]
-    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:v2.7.8'
-    compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'com.android.support:support-v4:25.3.1'
-    compile 'com.daimajia.numberprogressbar:library:1.2'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    testImplementation 'junit:junit:4.12'
+    implementation files('libs/YouTubeAndroidPlayerApi.jar')
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:palette-v7:27.1.1'
+
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    kapt 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.orhanobut:logger:2.2.0'
+    implementation 'com.github.chrisbanes.photoview:library:1.2.4'
+    implementation "io.reactivex.rxjava2:rxjava:2.1.9"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.38'
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
+    implementation 'com.daimajia.numberprogressbar:library:1.4@aar'
     //    compile 'com.flyco.labelview:FlycoLabelView_Lib:1.0.2@aar'
 
     //    compile 'com.github.shts:TriangleLabelView:1.1.2'
 
     //加载动画
-    compile 'com.wang.avi:library:2.1.3'
-    compile 'com.squareup.okio:okio:1.11.0'
-    //多主题
-    compile 'com.bilibili:magicasakura:0.1.5@aar'
+    implementation 'com.wang.avi:library:2.1.3'
+    implementation 'com.squareup.okio:okio:1.14.0'
     //阻塞检查
-    debugCompile 'com.github.markzhai:blockcanary-android:1.4.0'
-    releaseCompile 'com.github.markzhai:blockcanary-no-op:1.4.0'
+    debugImplementation 'com.github.markzhai:blockcanary-android:1.5.0'
+    releaseImplementation 'com.github.markzhai:blockcanary-no-op:1.5.0'
     //内存泄漏检查
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-    compile 'com.android.support:palette-v7:25.3.1'
-    compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'com.facebook.stetho:stetho:1.4.1'
-    compile 'com.uphyca:stetho_realm:2.0.0'
-    compile 'com.github.medyo:fancybuttons:1.8.3'
-    compile 'com.github.anzaizai:EasyRefreshLayout:1.1.5'
-    compile 'com.github.maoruibin:OneDrawable:1.0.2'
-    compile 'com.yarolegovich:discrete-scrollview:1.2.0'
-    compile 'com.github.lzyzsd:circleprogress:1.2.1'
-    compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
-        transitive = true;
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
+    testImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
+    implementation 'org.greenrobot:eventbus:3.0.0'
+//    implementation 'com.facebook.stetho:stetho:1.4.1'
+//    implementation 'com.uphyca:stetho_realm:2.0.0'
+    implementation 'com.github.medyo:fancybuttons:1.8.3'
+    implementation 'com.github.anzaizai:EasyRefreshLayout:1.1.5'
+    implementation 'com.yarolegovich:discrete-scrollview:1.2.0'
+    implementation 'com.github.lzyzsd:circleprogress:1.2.1'
+    implementation('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
+        transitive = true
     }
+    implementation 'com.android.support:multidex:1.0.3'
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'org.jetbrains.anko:anko:0.10.4'
+    implementation 'androidx.core:core-ktx:0.3'
+}
+repositories {
+    mavenCentral()
 }
