--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,9 +23,8 @@
             android:name="io.fabric.ApiKey"
             android:value="84b999d3e2f06998f02151710e7acde952a5d5e6" />
 
-        <activity android:name=".ui.main.MainActivity" />
         <activity
-            android:name=".ui.main.MainActivity1"
+            android:name=".ui.main.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
