--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 apply from: "config.gradle"
 buildscript {
+    ext.kotlin_version = '1.2.31'
     repositories {
         mavenCentral()
         jcenter()
         maven { url 'https://maven.fabric.io/public' }
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-beta6'
-        classpath 'io.realm:realm-gradle-plugin:2.3.1'
-        classpath 'io.fabric.tools:gradle:1.+'
+        classpath 'com.android.tools.build:gradle:3.1.1'
+        classpath 'io.realm:realm-gradle-plugin:5.0.0'
+        classpath 'io.fabric.tools:gradle:1.25.3'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 //        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -21,12 +24,9 @@ allprojects {
         maven { url 'https://maven.fabric.io/public' }
         mavenCentral()
         jcenter()
-        maven {
-            url "https://jitpack.io"
-        }
-        maven {
-            url 'https://github.com/uPhyca/stetho-realm/raw/master/maven-repo'
-        }
+        maven { url "https://jitpack.io" }
+        maven { url 'https://github.com/uPhyca/stetho-realm/raw/master/maven-repo' }
+        google()
     }
 }
 
