--- a/config.gradle
+++ b/config.gradle
@@ -10,21 +10,20 @@ ext{
     ]
 
     dependencies = [
-            'appcompat-v7' : 'com.android.support:appcompat-v7:25.3.1',
-            'design' :  'com.android.support:design:25.3.1',
-            'cardview-v7' :  'com.android.support:cardview-v7:25.3.1',
-
-            'okhttp' :  'com.squareup.okhttp3:okhttp:3.0.1',
-            'retrofit' :  'com.squareup.retrofit2:retrofit:2.0.0-beta4',
-            'rxjava' : 'io.reactivex:rxjava:1.2.7',
-            'rxandroid' : 'io.reactivex:rxandroid:1.1.0',
-            'adapter-rxjava' : 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4',
-            'glide' :  'com.github.bumptech.glide:glide:3.7.0',
-            'converter-gson' :  'com.squareup.retrofit2:converter-gson:2.0.0-beta4',
-            'butterknife' :  'com.jakewharton:butterknife:8.5.1',
-            'gson' :  'com.google.code.gson:gson:2.5',
-            'logger' :  'com.orhanobut:logger:1.4',
-            'photoview' :  'com.github.chrisbanes.photoview:library:1.2.4',
-            'numberprogressbar' :  'com.daimajia.numberprogressbar:library:1.2',
+//            'appcompat-v7' : 'com.android.support:appcompat-v7:25.4.0',
+//            'design' :  'com.android.support:design:25.4.0',
+//            'cardview-v7' :  'com.android.support:cardview-v7:25.4.0',
+//
+//            'okhttp' :  'com.squareup.okhttp3:okhttp:3.0.1',
+//            'retrofit' :  'com.squareup.retrofit2:retrofit:2.0.0-beta4',
+//            'rxjava' : 'io.reactivex:rxjava:1.2.7',
+//            'rxandroid' : 'io.reactivex:rxandroid:1.1.0',
+//            'adapter-rxjava' : 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4',
+//            'glide' :  'com.github.bumptech.glide:glide:3.7.0',
+//            'converter-gson' :  'com.squareup.retrofit2:converter-gson:2.0.0-beta4',
+//            'butterknife' :  'com.jakewharton:butterknife:8.5.1',
+//            'gson' :  'com.google.code.gson:gson:2.5',
+//            'logger' :  'com.orhanobut:logger:1.4',
+//            'photoview' :  'com.github.chrisbanes.photoview:library:1.2.4',
     ]
 }
